# monsters-inc

./: .gitignore  .pre-commit-config.yaml  BACKLOG.md  CLAUDE.md  INITIAL_PROMPT.md  Makefile  PROMPT.md  README.md  RUNBOOK.md  pyproject.toml  spec.md
.claude/: progress.sh  settings.json  validate-sparql.sh  validate-ttl.sh
.claude/commands/: goal.md
.claude/plans/: council-review-2026-05-27-round2.md  remediation-plan-2026-05-27.md
.claude/prompts/: FINAL_PROMPT.md
data/: doors.json  monsters.json  scare_records.json
docs/: 00-overview.md  01-domain-model.md  02-capability-map.md  03-business-process.md  04-ontology-bpm.md  05-data-catalog.md  06-data-lineage.md  07-service-catalog.md  08-glossary.md  09-constraints-queries.md  10-entity-graph.md  11-db-schema.md  12-unstructured-docs.md  13-agent-model.md  14-data-governance.md  15-constitution.md
images/: README.md
mappings/: mi-db.r2rml.ttl
ontologies/: mi-agent-model.ttl  mi-catalog.ttl  mi-constitution.ttl  mi-core.ttl  mi-glossary.ttl  mi-governance.ttl  mi-motivation.ttl  mi-process.ttl  mi-provenance.ttl
queries/: agent-authority.sparql  business-questions.sparql  compliance-violations.sparql  constitution.sparql  governance.sparql  human-centered.sparql
scripts/: build_catalog.py  check_doc_drift.py  generate_ontology.py  materialize_r2rml.py  render_assets.py  run_queries.py  run_tests.py  seed_data.py  validate_shacl.py
shapes/: mi-agent.shacl.ttl  mi-compliance.shacl.ttl  mi-core.shacl.ttl
