[project]
name = "monsters-inc-enterprise-model"
version = "0.1.0"
description = "Enterprise architecture artifacts for Monsters, Inc. using open semantic web standards"
requires-python = ">=3.11"
dependencies = [
    "rdflib>=7.0.0",
    "pyshacl>=0.26.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
]

[project.scripts]
mi-ontology = "scripts.generate_ontology:main"
mi-validate = "scripts.validate_shacl:main"
mi-query    = "scripts.run_queries:main"
mi-catalog  = "scripts.build_catalog:main"
mi-seed     = "scripts.seed_data:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "ruff>=0.15.14",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
# E501 (line length) is owned by black via line-length above. The remaining
# over-length lines are unsplittable string literals (SQL DDL, console messages)
# that black deliberately leaves intact; flagging them would only add noise.
ignore = ["E501"]
